# kafka-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: setup  update
src/kafka_python/: consumer.py  producer.py
src/my_kafka/: confluent_consumer.py  confluent_producer.py  consumer.py  producer.py
tests/: test_kafka.py
