[tool.poetry]
name = "kafka_python"
version = "0.1.0"
description = ""
authors = ["ayekhantkhantpo <ayekhantkhantpo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.21.0"
confluent-kafka = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
isort = "^5.11.4"
black = "^22.12.0"
pyproject-flake8 = "^5.0.4"

[tool.poetry.scripts]
producer="kafka_python.producer:main"
consumer="kafka_python.consumer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
